Update print statement from 'Hello' to 'Goodbye'

--- a/article.html
+++ b/article.html
@@ -10,16 +10,17 @@
     <title id="page-title">Hourly Houston</title>
     <!-- SEO/meta placeholders (will be populated dynamically when the article loads) -->
     <meta id="meta-desc" name="description" content="">
+    <meta property="og:type" content="article">
     <meta id="meta-ogtitle" property="og:title" content="">
     <meta id="meta-ogdesc" property="og:description" content="">
     <meta id="meta-ogimage" property="og:image" content="">
-	<meta id="meta-ogurl" property="og:url" content="https://hourlyhouston.vercel.app/">
-	<meta id="meta-ogsite" property="og:site_name" content="Hourly Houston">
-	<meta id="meta-twitter-title" name="twitter:title" content="">
-	<meta id="meta-twitter-desc" name="twitter:description" content="">
-	<meta id="meta-twitter-image" name="twitter:image" content="">
-	<meta id="meta-name-title" name="title" content="">
-    <meta id="meta-twitter" name="twitter:card" content="summary_large_image">
+    <meta id="meta-ogurl" property="og:url" content="https://hourlyhouston.vercel.app/">
+    <meta id="meta-ogsite" property="og:site_name" content="Hourly Houston">
+    <meta id="meta-twitter-title" name="twitter:title" content="">
+    <meta id="meta-twitter-desc" name="twitter:description" content="">
+    <meta id="meta-twitter-image" name="twitter:image" content="">
+    <meta id="meta-name-title" name="title" content="">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Injection templates: place small HTML widgets or scripts here using type="text/x-inject" and id matching the slot ids below.
 	    Example safe usage (paste into <head>):
@@ -598,27 +599,8 @@
 				document.getElementById('meta-twitter-desc').content = firstParagraph;
 				document.getElementById('meta-twitter-image').content = post.url;
 				document.getElementById('meta-name-title').content = post.title;
-				const firstPara = (post.body||'').split(/\n\n+/)[0] || '';
-				// set document title and meta tags for social previews
-				const pageTitle = `Hourly Houston - ${post.title || ''}`.trim();
-				document.getElementById('page-title').textContent = pageTitle;
-				// standard description
-				const desc = firstPara.replace(/\n/g,' ');
-				const img = post.url || '';
-				const title = post.title || 'Hourly Houston';
-				document.getElementById('meta-desc').setAttribute('content', desc);
-				// Open Graph
-				document.getElementById('meta-ogtitle').setAttribute('content', title);
-				document.getElementById('meta-ogdesc').setAttribute('content', desc);
-				document.getElementById('meta-ogimage').setAttribute('content', img);
+				// URL for sharing
 				document.getElementById('meta-ogurl').setAttribute('content', location.href);
-				document.getElementById('meta-ogsite').setAttribute('content', 'Hourly Houston');
-				// Twitter
-				document.getElementById('meta-twitter-title').setAttribute('content', title);
-				document.getElementById('meta-twitter-desc').setAttribute('content', desc);
-				document.getElementById('meta-twitter-image').setAttribute('content', img);
-				// fallback meta name=title
-				document.getElementById('meta-name-title').setAttribute('content', pageTitle);
 			}catch(e){/* ignore if DOM meta nodes missing */}
 
 			// After inserting the article body, run any inject templates found in the head
