--- a/search.html
+++ b/search.html
@@ -196,8 +196,11 @@
 
       const right = document.createElement('div'); right.className = 'meta-date'; right.textContent = formatDate(post.scrapedAt || '');
 
-      // make whole row clickable
-      row.addEventListener('click', function(){ location.href = '/article.html?' + encodeURIComponent(post.title || ''); });
+      // make whole row clickable using slug URL (spaces -> hyphens)
+      row.addEventListener('click', function(){
+        const slug = encodeURIComponent((post.title || '').replace(/\s+/g, '-'));
+        location.href = '/articles/' + slug;
+      });
       row.appendChild(imgWrap); row.appendChild(mid); row.appendChild(right);
       container.appendChild(row);
     }
