--- a/index.html
+++ b/index.html
@@ -468,10 +468,9 @@
 					const h1 = document.createElement('h1'); h1.textContent = hero.title || '';
 					const p = document.createElement('p'); p.textContent = truncate(hero.body || '', HERO_CHAR_LIMIT);
 					const h4 = document.createElement('h4'); h4.textContent = timeAgo(hero.scrapedAt || null);
-					// wrap hero content in a link to article page using slug (spaces -> hyphens)
+					// wrap hero content in a link to article page using encoded title
 					const a = document.createElement('a');
-					const heroSlug = encodeURIComponent((hero.title || '').replace(/\s+/g, '-'));
-					a.href = `/articles/${heroSlug}`;
+					a.href = `/article.html?${encodeURIComponent(hero.title || '')}`;
 					a.setAttribute('aria-label', hero.title || 'Open article');
 					a.appendChild(heroImg);
 					a.appendChild(h1);
@@ -497,10 +496,9 @@
 						const img = document.createElement('img'); img.src = post.url || ''; img.alt = post.title || '';
 						const title = document.createElement('h1'); title.textContent = post.title || '';
 						const body = document.createElement('p'); body.textContent = truncate(post.body || '', STORY_CHAR_LIMIT);
-						// make the whole card clickable and navigate using slug (spaces -> hyphens)
+						// make the whole card clickable and navigate to article.html by title
 						const link = document.createElement('a');
-						const slug = encodeURIComponent((post.title || '').replace(/\s+/g, '-'));
-						link.href = `/articles/${slug}`;
+						link.href = `/article.html?${encodeURIComponent(post.title || '')}`;
 						link.setAttribute('aria-label', post.title || 'Open article');
 						link.appendChild(img);
 						link.appendChild(title);
